artifacts/logs/demo_output_production.log
Resolving dependencies...
Build profile: -w ghc-9.10.3 -O1
In order, the following will be built (use -v for more details):
 - h-rich-0.1.0.0 (lib) (configuration changed)
 - h-rich-0.1.0.0 (exe:h-rich-demo) (configuration changed)
Configuring library for h-rich-0.1.0.0...
Preprocessing library for h-rich-0.1.0.0...
Building library for h-rich-0.1.0.0...
[15 of 18] Compiling HRich.Theme      ( src/HRich/Theme.hs, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Theme.o, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Theme.dyn_o )
[16 of 18] Compiling HRich.Log        ( src/HRich/Log.hs, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Log.o, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Log.dyn_o )
src/HRich/Log.hs:33:1: error: [GHC-87110]
    Could not load module ‘Data.Time’.
    It is a member of the hidden package ‘time-1.12.2’.
    Perhaps you need to add ‘time’ to the build-depends in your .cabal file.
    Use -v to see a list of the files searched for.
   |
33 | import Data.Time (getCurrentTime, formatTime, defaultTimeLocale)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

[17 of 18] Compiling HRich.Traceback  ( src/HRich/Traceback.hs, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Traceback.o, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Traceback.dyn_o )
src/HRich/Traceback.hs:23:32: warning: [GHC-38856] [-Wunused-imports]
    The import of ‘HRichText’ from module ‘HRich.Text’ is redundant
   |
23 | import HRich.Text (fromMarkup, HRichText)
   |                                ^^^^^^^^^

src/HRich/Traceback.hs:62:9: warning: [GHC-81995] [-Wunused-do-bind]
    A do-notation statement discarded a result of type
      ‘ghc-prim:GHC.Types.ZonkAny 0’
    Suggested fix:
      Suppress this warning by saying
        ‘_ <- error "Program exited due to unhandled exception"’
   |
62 |         error "Program exited due to unhandled exception" -- Re-throw or exit? 
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: [Cabal-7125]
Failed to build h-rich-0.1.0.0 (which is required by exe:h-rich-demo from h-rich-0.1.0.0).

